[package]
name = "billion-row-bench"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "billion-row-bench"
path = "src/main.rs"

[dependencies]
afterburner = { path = "../../crates/afterburner", default-features = false, features = ["wasm", "thrust", "adaptive"] }
serde_json = "1"
anyhow = "1"
