[package]
name = "afterburner-example-cache-sqlite"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
afterburner = { path = "../../crates/afterburner" }
afterburner-core = { path = "../../crates/afterburner-core" }
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
