[package]
name = "afterburner-example-express-app"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
# Afterburner runs the JS handlers. `thrust` gives us multi-worker
# dispatch so concurrent HTTP requests don't serialize through one
# combustor.
afterburner = { path = "../../crates/afterburner", features = ["thrust"] }

# Transport layer. axum + tokio host the real HTTP server; each
# incoming request becomes a JSON envelope handed to the JS app via
# Afterburner::run.
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
